# ft_printf

./: CMakeLists.txt  Makefile  README.md  a.out  main.c
ft_printf/: Makefile
ft_printf/includes/: ft_printf.h  get_next_line.h  libft.h
ft_printf/libft/srcs/: ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstiter.c  ft_lstmap.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr.c  ft_putstr.c  ft_range.c  ft_strchr.c  ft_strclr.c  ft_strcpy.c  ft_strdup.c  ft_striter.c  ft_strlcat.c  ft_strlen.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strnstr.c  ft_strrchr.c  ft_strsplit.c  ft_strsub.c  ft_strtrim.c  ft_toupper.c
ft_printf/srcs/: char.c  ft_printf.c  hexademic.c  integer.c  main.c  oct.c  string.c  uint.c  utilities.c  utilities2.c
includes/: ft_printf.h  get_next_line.h  libft.h
libft/: Makefile
libft/srcs/: ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_lowercase.c  ft_lstdelone.c  ft_lstnew.c  ft_memalloc.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putendl.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_sqrt.c  ft_strcat.c  ft_strcmp.c  ft_strdel.c  ft_strequ.c  ft_striteri.c  ft_strjoin.c  ft_strmap.c  ft_strnequ.c  ft_strnew.c  ft_strstr.c  ft_tolower.c  ft_uppercase.c  ft_wordcounter.c  get_next_line.c
pft/: history.csv  results.txt  test  test.mine
pft/test.dSYM/Contents/Resources/DWARF/: test
srcs/: char.c  float.c  float2.c  float3.c  ft_printf.c  hex.c  init.c  int.c  octal.c  pointer.c  setters.c  string.c  unsignedint.c  utils.c  utils2.c
