cmake_minimum_required(VERSION 3.17)
project(FT_Printf_42_master_5 C)

set(CMAKE_C_STANDARD 11)

include_directories(ft_printf/includes)
include_directories(includes)

add_executable(FT_Printf_42_master_5
        ft_printf/includes/ft_printf.h
        ft_printf/includes/get_next_line.h
        ft_printf/includes/libft.h
        ft_printf/libft/srcs/ft_atoi.c
        ft_printf/libft/srcs/ft_bzero.c
        ft_printf/libft/srcs/ft_isalnum.c
        ft_printf/libft/srcs/ft_isalpha.c
        ft_printf/libft/srcs/ft_isascii.c
        ft_printf/libft/srcs/ft_isdigit.c
        ft_printf/libft/srcs/ft_isprint.c
        ft_printf/libft/srcs/ft_itoa.c
        ft_printf/libft/srcs/ft_lowercase.c
        ft_printf/libft/srcs/ft_lstadd.c
        ft_printf/libft/srcs/ft_lstdel.c
        ft_printf/libft/srcs/ft_lstdelone.c
        ft_printf/libft/srcs/ft_lstiter.c
        ft_printf/libft/srcs/ft_lstmap.c
        ft_printf/libft/srcs/ft_lstnew.c
        ft_printf/libft/srcs/ft_memalloc.c
        ft_printf/libft/srcs/ft_memccpy.c
        ft_printf/libft/srcs/ft_memchr.c
        ft_printf/libft/srcs/ft_memcmp.c
        ft_printf/libft/srcs/ft_memcpy.c
        ft_printf/libft/srcs/ft_memdel.c
        ft_printf/libft/srcs/ft_memmove.c
        ft_printf/libft/srcs/ft_memset.c
        ft_printf/libft/srcs/ft_putchar.c
        ft_printf/libft/srcs/ft_putchar_fd.c
        ft_printf/libft/srcs/ft_putendl.c
        ft_printf/libft/srcs/ft_putendl_fd.c
        ft_printf/libft/srcs/ft_putnbr.c
        ft_printf/libft/srcs/ft_putnbr_fd.c
        ft_printf/libft/srcs/ft_putstr.c
        ft_printf/libft/srcs/ft_putstr_fd.c
        ft_printf/libft/srcs/ft_range.c
        ft_printf/libft/srcs/ft_sqrt.c
        ft_printf/libft/srcs/ft_strcat.c
        ft_printf/libft/srcs/ft_strchr.c
        ft_printf/libft/srcs/ft_strclr.c
        ft_printf/libft/srcs/ft_strcmp.c
        ft_printf/libft/srcs/ft_strcpy.c
        ft_printf/libft/srcs/ft_strdel.c
        ft_printf/libft/srcs/ft_strdup.c
        ft_printf/libft/srcs/ft_strequ.c
        ft_printf/libft/srcs/ft_striter.c
        ft_printf/libft/srcs/ft_striteri.c
        ft_printf/libft/srcs/ft_strjoin.c
        ft_printf/libft/srcs/ft_strlcat.c
        ft_printf/libft/srcs/ft_strlen.c
        ft_printf/libft/srcs/ft_strmap.c
        ft_printf/libft/srcs/ft_strmapi.c
        ft_printf/libft/srcs/ft_strncat.c
        ft_printf/libft/srcs/ft_strncmp.c
        ft_printf/libft/srcs/ft_strncpy.c
        ft_printf/libft/srcs/ft_strnequ.c
        ft_printf/libft/srcs/ft_strnew.c
        ft_printf/libft/srcs/ft_strnstr.c
        ft_printf/libft/srcs/ft_strrchr.c
        ft_printf/libft/srcs/ft_strsplit.c
        ft_printf/libft/srcs/ft_strstr.c
        ft_printf/libft/srcs/ft_strsub.c
        ft_printf/libft/srcs/ft_strtrim.c
        ft_printf/libft/srcs/ft_tolower.c
        ft_printf/libft/srcs/ft_toupper.c
        ft_printf/libft/srcs/ft_uppercase.c
        ft_printf/libft/srcs/ft_wordcounter.c
        ft_printf/libft/srcs/get_next_line.c
        ft_printf/srcs/ft_printf.c
        includes/ft_printf.h
        includes/get_next_line.h
        includes/libft.h
        libft/srcs/ft_atoi.c
        libft/srcs/ft_bzero.c
        libft/srcs/ft_isalnum.c
        libft/srcs/ft_isalpha.c
        libft/srcs/ft_isascii.c
        libft/srcs/ft_isdigit.c
        libft/srcs/ft_isprint.c
        libft/srcs/ft_itoa.c
        libft/srcs/ft_lowercase.c
        libft/srcs/ft_lstadd.c
        libft/srcs/ft_lstdel.c
        libft/srcs/ft_lstdelone.c
        libft/srcs/ft_lstiter.c
        libft/srcs/ft_lstmap.c
        libft/srcs/ft_lstnew.c
        libft/srcs/ft_memalloc.c
        libft/srcs/ft_memccpy.c
        libft/srcs/ft_memchr.c
        libft/srcs/ft_memcmp.c
        libft/srcs/ft_memcpy.c
        libft/srcs/ft_memdel.c
        libft/srcs/ft_memmove.c
        libft/srcs/ft_memset.c
        libft/srcs/ft_putchar.c
        libft/srcs/ft_putchar_fd.c
        libft/srcs/ft_putendl.c
        libft/srcs/ft_putendl_fd.c
        libft/srcs/ft_putnbr.c
        libft/srcs/ft_putnbr_fd.c
        libft/srcs/ft_putstr.c
        libft/srcs/ft_putstr_fd.c
        libft/srcs/ft_range.c
        libft/srcs/ft_sqrt.c
        libft/srcs/ft_strcat.c
        libft/srcs/ft_strchr.c
        libft/srcs/ft_strclr.c
        libft/srcs/ft_strcmp.c
        libft/srcs/ft_strcpy.c
        libft/srcs/ft_strdel.c
        libft/srcs/ft_strdup.c
        libft/srcs/ft_strequ.c
        libft/srcs/ft_striter.c
        libft/srcs/ft_striteri.c
        libft/srcs/ft_strjoin.c
        libft/srcs/ft_strlcat.c
        libft/srcs/ft_strlen.c
        libft/srcs/ft_strmap.c
        libft/srcs/ft_strmapi.c
        libft/srcs/ft_strncat.c
        libft/srcs/ft_strncmp.c
        libft/srcs/ft_strncpy.c
        libft/srcs/ft_strnequ.c
        libft/srcs/ft_strnew.c
        libft/srcs/ft_strnstr.c
        libft/srcs/ft_strrchr.c
        libft/srcs/ft_strsplit.c
        libft/srcs/ft_strstr.c
        libft/srcs/ft_strsub.c
        libft/srcs/ft_strtrim.c
        libft/srcs/ft_tolower.c
        libft/srcs/ft_toupper.c
        libft/srcs/ft_uppercase.c
        libft/srcs/ft_wordcounter.c
        libft/srcs/get_next_line.c
        srcs/char.c
        srcs/float.c
        srcs/float2.c
        srcs/float3.c
        srcs/ft_printf.c
        srcs/hex.c
        srcs/init.c
        srcs/int.c
        srcs/octal.c
        srcs/pointer.c
        srcs/setters.c
        srcs/string.c
        srcs/unsignedint.c
        srcs/utils.c
        srcs/utils2.c
        srcs/utils3.c
        main.c)
